# lstr

./: .buildconfig  .gitignore  de.linusmathieu.Liegensteuerung.json  de.linusmathieu.Liegensteuerung.json~  install.sh  meson.build
build-aux/meson/: postinstall.py
data/: de.linusmathieu.Liegensteuerung.appdata.xml.in  de.linusmathieu.Liegensteuerung.desktop.in  de.linusmathieu.Liegensteuerung.gschema.xml  meson.build
po/: meson.build
src/: auth_util.py  calibration_page.py  calibration_page.ui  const.py  edit_patient_page.py  edit_patient_page.ui  edit_program_page.py  edit_program_page.ui  env.py  highcontrast.css  keyboard.py  keyboard.ui  liegensteuerung.css  liegensteuerung.gresource.xml  liegensteuerung.in  login_page.py  login_page.ui  main.py  meson.build  onboard_util.py  opcua_util.py  osk_util.py  page.py  pain_evaluation_page.py  pain_evaluation_page.ui  patient_row.py  patient_util.py  program_row.py  program_util.py  register_page.py  register_page.ui  select_patient_page.py  select_patient_page.ui  select_program_page.py  select_program_page.ui  set_up_page.py  set_up_page.ui  touchcombobox.py  touchcombobox.ui  treatment_page.py  (+10 more)
